# starlight

./: .gitignore  .gitmodules  .startup-snapshot  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  a.bmir  a.out  build-debug.sh  build.sh  cachegrind.out.71369  cachegrind.out.71399  f  file.c  file.js  file.mjs  file.scm  file2.js  module.js  out  package-lock.json  test262-failed  test262-skipped  test262-succeed  test262_passed  test_ignore.txt
.github/workflows/: nightly.yml  rust.yml  test262.yml
basic/: results.json
crates/benchmarks/: Cargo.toml  perf.data  perf.data.old
crates/benchmarks/benches/: bench_for_loop.rs  bench_prop_for_loop.rs
crates/bmalloc-rs/: Cargo.toml
crates/fullcodegen/: Cargo.toml
crates/fusion/: Cargo.toml
crates/fusion/src/: add_stub.rs  compiler.rs  lib.rs
crates/starlight/: Cargo.toml
crates/starlight-derive/: Cargo.toml
crates/starlight-derive/src/: lib.rs
crates/starlight/benches/: bench_properties.rs  bench_snapshot.rs  bench_symbol_table.rs  bench_tiny_alloc.rs  gcbench-gc.rs  gcbench-rc.rs  gcbench.rs
crates/starlight/src/: bytecode.rs  bytecompiler.rs  codegen.rs  comet.rs  constant.rs  frontend.rs  gc.rs  generator.rs  heap.rs  interpreter.rs  jit.rs  jsrt.rs  lib.rs  main.rs  options.rs  runtime.rs  symbol_table.rs  tracingjit.rs  utils.rs  vm.rs
crates/starlight/src/builtins/: ArrayIterator.js  ArrayPrototype.js  FFI.js  GlobalOperations.js  Math.js  Object.js  RegExpPrototype.js  RegExpStringIterator.js  Spread.js  StringIterator.js  StringPrototype.js
crates/starlight/src/bytecode/: block.rs  opcodes.rs  opcodes_v2.rs  profile.rs
crates/starlight/src/frontend/: ast_parser.rs  scope_analyzer.rs
crates/starlight/src/gc/: accounting.rs  allocation.rs  bitmap_ms.rs  block.rs  block_allocator.rs  block_set.rs  bump.rs  cell.rs  compressed_gc.rs  compressed_pointer.rs  constants.rs  constraint.rs  dlmalloc_heap.rs  freelist.rs  handle.rs  heap.rs  incremental_marking.rs  jet.rs  large_object_space.rs  malloc_gc.rs  malloc_heap.rs  mark_copy.rs  marking.rs  mem.rs  migc.rs  os.rs  pmarking.rs  region.rs  safepoint.rs  shadowstack.rs  snapshot.rs  space.rs  space_bitmap.rs  valgrind.rs  vgrs.rs
crates/starlight/src/gc/accounting/: space_bitmap.rs
crates/starlight/src/gc/jet/: block.rs  block_allocator.rs
crates/starlight/src/gc/os/: allocator.rs  page.rs
crates/starlight/src/gc/region/: allocator.rs  block.rs  block_allocator.rs  los.rs
crates/starlight/src/gc/snapshot/: deserializer.rs  serializer.rs
crates/starlight/src/generator/: register_scope.rs
crates/starlight/src/heap/: addr.rs  allocation.rs  bitmap.rs  block.rs  block_allocator.rs  block_directory.rs  block_set.rs  cell.rs  constraint.rs  context.rs  marked_block.rs  marker_thread.rs  pmarking.rs  precise_allocation.rs  rcheap.rs  snapshot.rs  space.rs  space_bitmap.rs  subspace.rs  weak_set.rs
crates/starlight/src/heap/snapshot/: deserializer.rs  serializer.rs
crates/starlight/src/interpreter/: callframe.rs  frame.rs  register.rs  stack.rs
crates/starlight/src/jit/: rt.c  stubs.rs
crates/starlight/src/jsrt/: array.rs  array_buffer.rs  boolean.rs  data_view.rs  date.rs  error.rs  ffi.rs  function.rs  generator.rs  global.rs  js262.rs  jsstd.rs  math.rs  number.rs  object.rs  promise.rs  regexp.rs  string.rs  symbol.rs  weak_ref.rs
crates/starlight/src/jsrt/jsstd/: file.rs
crates/starlight/src/runtime/: accessor.rs  arguments.rs  array.rs  attributes.rs  class.rs  env.rs  error.rs  function.rs  gc_array.rs  global.rs  indexed_elements.rs  js_arguments.rs  method_table.rs  number.rs  object.rs  property_descriptor.rs  slot.rs  storage.rs  string.rs  structure.rs  symbol.rs  value.rs
crates/starlight/src/tracingjit/: ir.rs  tracing_interpreter.rs
crates/starlight/src/utils/: align_as.rs  ordered_set.rs
crates/starlight/src/vm/: arguments.rs  array.rs  array_buffer.rs  array_storage.rs  attributes.rs  bigint.rs  builder.rs  builtins.rs  class.rs  code_block.rs  context.rs  data_view.rs  environment.rs  error.rs  function.rs  global.rs  indexed_elements.rs  interpreter.rs  map.rs  method_table.rs  native_iterator.rs  number.rs  object.rs  operations.rs  perf.rs  promise.rs  property_descriptor.rs  slot.rs  stack_alignment.rs  string.rs  structure.rs  structure_builder.rs  structure_chain.rs  symbol_table.rs  thread.rs  tracingjit.rs  typedarray.rs  value.rs
crates/starlight/src/vm/interpreter/: callframe.rs  frame.rs  stack.rs
crates/starlight/src/vm/tracingjit/: trace.rs
crates/test262-runner/: Cargo.toml
crates/test262-runner/src/: exec.rs  js262.rs  main.rs  read.rs  results.rs
crates/vm/: Cargo.toml
crates/vm/src/: heap.rs  lib.rs  main.rs  runtime.rs
crates/vm/src/gc/: bitmap.rs  block_directory.rs  freelist.rs  handle.rs  heap_cell.rs  marked_block.rs  marked_block_set.rs  marked_space.rs  precise_allocation.rs  tiny_bloom_filter.rs
crates/vm/src/heap/: allocator.rs  block_allocator.rs  collection.rs  large_object_space.rs  snapshot.rs  space_bitmap.rs  trace.rs  util.rs
crates/vm/src/heap/util/: bitmap_gen.rs  tagged_pointer.rs
crates/vm/src/runtime/: accessor.rs  arguments.rs  class.rs  context.rs  error.rs  indexed_elements.rs  js_cell.rs  js_function.rs  js_object.rs  js_string.rs  js_symbol.rs  js_value.rs  map.rs  method_table.rs  options.rs  property_descriptor.rs  ref_ptr.rs  slot.rs  storage.rs  structure.rs  symbol.rs  symbol_table.rs  type_info.rs  vm.rs
crates/vm/src/util/: array.rs
crates/wtf-rs/: Cargo.toml
crates/wtf-rs/src/: cryptographically_random_number.rs  endian.rs  lib.rs  list.rs  pure_nan.rs  random_device.rs  random_number.rs  segmented_vec.rs  stack_bounds.rs  swap_byte_order.rs  tagged_ptr.rs  weak_random.rs
docs/: Internals.md  compatability.md  snapshots-and-bundles.md  wtf.md
examples/: hello-world.js  lambda-calculus.js  lisp.js  lisp_core.js  nn.js  pi.js
new/: results.json
src/: gc.rs  heap.rs  lib.rs  main.rs  runtime.rs
test262-runner/: Cargo.toml
test262-runner/src/: main.rs
test262_harness/: sta.js
tools/: run_ci.sh
(+138 files in other folders)
