[workspace]
members = [
    "crates/starlight",
    "crates/wtf-rs",
    "crates/starlight-derive",
    "crates/test262-runner",
]
default-members = ["crates/starlight", "crates/test262-runner"]


[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
debug = true
