[workspace]
members = [
    "crates/starlight",
    "crates/wtf-rs",
    "crates/starlight-derive",
    "crates/test262-runner",
    "crates/fullcodegen",
]
default-members = ["crates/starlight", "crates/test262-runner"]


[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 1
incremental = true
[profile.bench]
lto = true
debug = true
