[package]
name = "test262-runner"
version = "0.1.0"
authors = ["Adel Prokurov <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test262-harness = "0.1"
starlight = { path = "../crates/starlight" }
rayon = "1.5"
