[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

starlight = { path = "../starlight" }

Boa = "0.11"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "bench_for_loop"
harness = false

[[bench]]
name = "bench_prop_for_loop"
harness = false
