[package]
name = "fusion"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = { version = "0.69" }
cranelift-codegen = { version = "0.69" }
cranelift-module = "0.69"
cranelift-object = "0.69"
cranelift-native = "0.69"
cranelift-jit = "0.69"
cranelift-frontend = "0.69"
