[package]
name = "starlight-derive"
version = "0.1.0"
authors = ["aprokurov <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "starlight_derive"
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
synstructure = "0.12"
