[package]
name = "starlight"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
mopa = "0.2"
wtf-rs = { path="../wtf-rs" }
ctor = "*"
paste = "1.0.5"
cfg-if = "1.0"
once_cell = "1.7"
regress = "0.3.0"
dashmap = "4.0"
swc_atoms = "0.2.5"
swc_common = "0.10.11"
swc_ecmascript = { version="0.45", features=["parser", "utils", "visit"] }
libc = "0.2"
libmimalloc-sys = { version="0.1", features=["extended"] }
starlight-derive = { path="../starlight-derive" }
structopt = "0.3"
vec_map = "0.8.2"
backtrace = "0.3"
intrusive-collections = "*"
atomic = "*"
crossbeam = "0.8"
yastl = "0.1.2"
ryu-js = "0.2.1"
memmap2 = "0.3"
num = "0.4"
parking_lot = "0.11.1"
mimalloc = "0.1.25"

const-random = "0.1.13"
[features]
val-as-f64 = []
val-as-u64 = []
enable-gc-tracking = []
no-inline-caching = []
# enable performance counter for interpreter/gc/codegen
perf = []
ffi = ["libloading", "libffi"]

default = ["val-as-u64"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_tiny_alloc"
harness = false

[[bench]]
name = "bench_symbol_table"
harness = false


[[bench]]
name = "gcbench"
harness = false

[[bench]]
name = "gcbench-rc"
harness = false


[[bench]]
name = "bench_snapshot"
harness = false


[[bin]]
name = "starlight-bundle"
path = "src/bin/bundle.rs"
[[bin]]
name = "sl"
path = "src/bin/sl.rs"

[lib]
name = "starlight"
crate-type = ["dylib", "rlib"]
[target.'cfg(all(not(wasm),target_pointer_width="64"))'.dependencies]
libffi = { version="1.0.0", optional=true }
libloading = { version="0.7.0", optional=true }

[target.'cfg(not(wasm))'.dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version="0.3", features=[
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    "wincrypt",
] }
