[package]
name = "test262-runner"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlight = { path = "../starlight" }
structopt = "0.3.21"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0.64"
bitflags = "1.2.1"
regex = "1.4.6"
once_cell = "1.7.2"
colored = "2.0.0"
fxhash = "0.2.1"
hex = "0.4.3"
num-format = "0.4.0"

[target.'cfg(target_pointer_width="64")']
git2 = "0.13.20"
