[package]
name = "wtf-rs"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5"
parking_lot = "0.11"
libc = "0.2"
errno = "0.2"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
    "wincrypt",
] }
